# server

./: CMakeLists.txt  README
include/: afyclient.h  afydaemon.h  afyhttp.h  mvclient.h  mvdaemon.h  mvhttp.h
src/: CMakeLists.txt  affinityd.c  afyclient.c  afyctest.c  afydaemon.c  b64.c  http.c  http.h  intr.c  intr.h  mvclient.c  mvctest.c  mvdaemon.c  mvstored.c  portability.c  portability.h  socket.c  socket.h  storebuiltinservices.cpp  storebuiltinservices.h  storecmd.cpp  storecmd.h  storenotifier.cpp  storenotifier.h  ucgetopt.c  ucgetopt.h  ucgetopt_long.c  ucgetopt_long.h
src/www/: 2dmap.html  console.html  fsm.html  hello.json  index.html  post.html  registration.html  ruleassistant.html
src/www/css/: 2dmap.css  affinity.css  fsm.css  landing.css  mvstored.css  ruleassistant.css
src/www/css/promo/: dsms_builder.css  dsms_demo.css  promo.css
src/www/doc/: Affinity server.html  ChaosDB cpp.html  ChaosDB js.html  ChaosDB protobuf.html  ChaosDB server.html  EULA_demo.html  FAQ.html  cplusplus.html  demo_EULA.html  demo_privacy.html  features.html  getting started.html  interface [cplusplus].html  interface [javascript].html  interface [protobuf].html  intro.html  javascript.html  mvSQL getting started.html  mvSQL reference.html  mvStore FAQ.html  mvStore cpp.html  mvStore getting started.html  mvStore js.html  mvStore protobuf.html  mvStore server.html  pathSQL basics [control].html  pathSQL basics [data].html  pathSQL getting started.html  pathSQL primer.html  pathSQL reference [definition].html  pathSQL reference [manipulation].html  pathSQL reference.html  protobuf.html  release notes.html  server.html  strengths.html  terminology.html
src/www/doc/css/: afydoc.css  ksdoc.css  mvdoc.css  source.css
src/www/doc/js/: afysnippets.js  snippets_to_console.js
src/www/doc/presentations/p_nutshell/: nutshell.html
src/www/doc/presentations/scripts/: slidy.js
src/www/doc/presentations/styles/: w3c-blue.css
src/www/doc/sources/: affinity-client_js.html  affinity_h.html  affinity_proto.html  affinity_py.html  chaosdb-client_js.html  chaosdb_h.html  chaosdb_proto.html  chaosdb_py.html  mvstore-client_js.html  mvstore_h.html  mvstore_proto.html  mvstore_py.html  rc_h.html  startup_h.html  units_h.html
src/www/doc/sources/mvsql/: class.html  delete.html  functions.html  identifier.html  inheritance.html  set_operator.html  transaction_basic.html  transaction_readonly.html  units.html  update.html
src/www/doc/sources/pathsql/: TODO.txt  between_in.html  class.html  collection_operators.html  delete.html  enum.html  exists.html  full_text_search.html  functions.html  groupBy.html  identifier.html  inheritance.html  insert.html  join.html  orderBy.html  reference.html  set_operator.html  timer.html  transaction_basic.html  transaction_readonly.html  transaction_sub.html  types.html  units.html  update.html
src/www/js/: 2dmap.js  affinity.js  afycommon.js  afyparser.js  afywidgets.js  detectmobilebrowser.js  editingctx.js  fsm.js  jquery.js  mvstored.js  ruleassistant.js
src/www/js/codemirror/mode/pathsql/: bla.pl  index.html  pathsql.js
src/www/js/promo/: dsms_builder.js  dsms_common.js  dsms_emitter.js  dsms_viewer.js  promo.js  sns.js
src/www/m/: 2dmap.html  console.html  fsm.html  index.html  ruleassistant.html
src/www/m/css/: 2dmap.css  affinity.css  fsm.css  landing.css  ruleassistant.css
src/www/m/doc/css/: afydoc.css
src/www/promo/: ddos.html  dsms.html  dsms_demo.html  dsms_demo_builder.html  rdbms2nosql.html  sns_demo.html
src/www/promo/demos/beacons/: beacons.html  sphere.dae
src/www/promo/demos/beacons/css/: beacons.css
src/www/promo/demos/beacons/js/: beacons.js
src/www/promo/demos/c3dl/math/: matrix.js
src/www/promo/demos/dsms/: dsms_demo.html  dsms_demo_builder.html
src/www/promo/demos/dsms/css/: dsms_demo.css
src/www/promo/demos/dsms/js/: dsms_builder.js  dsms_common.js  dsms_emitter.js  dsms_viewer.js
src/www/promo/demos/imu/: imu.html
src/www/promo/demos/imu/css/: imu.css
src/www/promo/demos/imu/js/: imu.js
src/www/promo/demos/pacman/: pacman.html
src/www/promo/demos/pacman/css/: pacman.css
src/www/promo/demos/pacman/js/: pacman.js
src/www/promo/demos/robot/: cone.dae  grass.dae  robot.html  wolf.dae
src/www/promo/demos/robot/css/: robot.css
src/www/promo/demos/robot/js/: robot.js
src/www/promo/demos/sdw/: initmap.html  sdw.html
src/www/promo/demos/sdw/css/: sdw.css
src/www/promo/demos/sdw/js/: init.js  initmap.js  sdw.js  sdw.sql.js
src/www/promo/demos/sns/: sns_demo.html
src/www/promo/demos/sns/css/: sns.css
src/www/promo/demos/sns/js/: sns.js
